--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cassettefy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pailin40.github.io/cassetteflow",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "npm start",
